# Obelix

./: .env  .gitignore  .mcp.json  .pre-commit-config.yaml  BLACKBOARD_FRAMEWORK.md  CLAUDE.md  HEXAGONAL_REFACTOR_PLAN.md  LICENSE  Makefile  README.md  ROADMAP_TEXT2SQL.md  demo_bash_server.py  demo_cli.py  demo_factory.py  demo_subagent.py  main.py  main_2.py  mockup  ppt_content.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.db  test_a2a_client.py  test_db.py  tmp_issue_body.md
.claude/: settings.local.json
.playwright-mcp/: page-2026-04-12T17-47-32-631Z.yml  page-2026-04-12T17-49-08-335Z.yml
docs/: GRAPH_MEMORY_CONCEPTS.md  TRACER_MCP_PLAN.md  a2a_compliance.md  a2a_serve.md  a2a_server.md  agent_factory.md  base_agent.md  bash_tool.md  hooks.md  index.md  openshell_deployer.md  openshell_setup.md  shared_memory_plan.md  skills.md  skills_implementation_notes.md  tools.md
examples/: bash_server.py  cli_client.py  dev_workflow_server.py  factory_server.py  mcp_playwright.py
examples/deploy_demo/: README.md  deploy.py  policy.yaml  serve.py
examples/shell-demo/: .env.example  Dockerfile  README.md  bash_server_sandboxed.py  docker-compose.yaml  policy.yaml
skills/creating-agents/: SKILL.md
sql/: main.py  session_context.py
sql/agents/: __init__.py  column_filter_agent.py  coordinator.py  query_enhancemnt_agent.py  sql_agent.py
sql/sql_tools/: ask_user_question_tool.py  column_filter_tool.py  (+2 more)
src/: config.py  k8s_config.py  logging_config.py  providers.py
tests/: README.md  TESTING_ROADMAP.md  conftest.py  test_smoke.py
(+450 files in other folders)
